Updated files for compiler also added test cases

--- a/C Files/makefile
+++ b/C Files/makefile
@@ -1,5 +1,5 @@
 YFLAGS = -dv -t
-CFLAGS = -g
+CFLAGS = -g -Wformat=0
 a.out: grammar.o lex.o
 	gcc -o a.out grammar.o lex.o driver.c -lfl
 	rm -f *.o *~ y.output
